Numpy Array Creation

--- a/Lec-01(NumPy-01-ArrayCreation).ipynb
+++ b/Lec-01(NumPy-01-ArrayCreation).ipynb
@@ -6,13 +6,14 @@
    "metadata": {},
    "source": [
     "---   \n",
-    " <img align=\"left\" width=\"75\" height=\"75\"  src=\"https://upload.wikimedia.org/wikipedia/en/c/c8/University_of_the_Punjab_logo.png\"> \n",
+    "<img align=\"left\" width=\"110\"   src=\"https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg\"> \n",
     "\n",
-    "<h1 align=\"center\">Department of Data Science</h1>\n",
-    "<h1 align=\"center\">Course: Tools and Techniques for Data Science</h1>\n",
+    "<h1 align=\"center\">Tools and Techniques for Data Science</h1>\n",
+    "<h1 align=\"center\">Course: Python for Data Scientists</h1>\n",
     "\n",
     "---\n",
-    "<h3><div align=\"right\">Instructor: Muhammad Arif Butt, Ph.D.</div></h3>    "
+    "\n",
+    "<h3><div align=\"right\">Muhammad Sheraz(Data Scientist)</div></h3>    "
    ]
   },
   {
@@ -20,15 +21,7 @@
    "id": "f362a88f",
    "metadata": {},
    "source": [
-    "<h1 align=\"center\">Lecture 3.1 (NumPy-01)</h1>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "db61dfd7",
-   "metadata": {},
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/arifpucit/data-science/blob/master/Section-3-Python-for-Data-Scientists/Lec-3.01(NumPy-01-ArrayCreation).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<h1 align=\"center\">Lecture 1 (NumPy-01)</h1>"
    ]
   },
   {
@@ -131,23 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "b85cdbbb",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pip in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (22.0.3)\n",
-      "Collecting pip\n",
-      "  Using cached pip-22.0.4-py3-none-any.whl (2.1 MB)\n",
-      "Installing collected packages: pip\n",
-      "  Attempting uninstall: pip\n",
-      "    Found existing installation: pip 22.0.3\n",
-      "    Uninstalling pip-22.0.3:\n",
-      "      Successfully uninstalled pip-22.0.3\n",
-      "Successfully installed pip-22.0.4\n"
+      "'C:\\Program' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
      ]
     }
    ],
@@ -158,15 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "c2831c56",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (1.19.5)\r\n"
+      "'C:\\Program' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
      ]
     }
    ],
@@ -187,18 +174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "dba905d0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('1.19.5',\n",
-       " ['/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/numpy'])"
+       "('1.26.3',\n",
+       " ['C:\\\\Users\\\\LENOVO\\\\AppData\\\\Roaming\\\\Python\\\\Python310\\\\site-packages\\\\numpy'])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a72abbe2",
    "metadata": {},
    "outputs": [
@@ -276,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "006754f4",
    "metadata": {},
    "outputs": [
@@ -291,7 +278,7 @@
       "arr.dtype:  float64\n",
       "arr.itemsize:  8\n",
       "arr.nbytes:  0\n",
-      "arr.data:  <memory at 0x0000019FA7B41840>\n",
+      "arr.data:  <memory at 0x000001BC5600B1C0>\n",
       "arr.strides:  (0,)\n",
       "arr.flags: \n",
       "   C_CONTIGUOUS : True\n",
@@ -373,7 +360,7 @@
       "arr.dtype:  int32\n",
       "arr.itemsize:  4\n",
       "arr.nbytes:  4\n",
-      "arr.data:  <memory at 0x0000019FB0F82E80>\n",
+      "arr.data:  <memory at 0x000001BC57A43240>\n",
       "arr.strides:  ()\n",
       "arr.flags: \n",
       "   C_CONTIGUOUS : True\n",
@@ -1000,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "8db932d3",
    "metadata": {},
    "outputs": [
@@ -1010,7 +997,7 @@
        "array([0., 0., 0.])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "57ec3ff3",
    "metadata": {},
    "outputs": [
@@ -1035,7 +1022,7 @@
        "       [0., 0., 0.]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,17 +1186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "b0626a6f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1., 1., 1.])"
+       "array([0., 0., 0.])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
