--- a/Lec-02(NumPy-02-Array-vs-List).ipynb
+++ b/Lec-02(NumPy-02-Array-vs-List).ipynb
@@ -6,13 +6,14 @@
    "metadata": {},
    "source": [
     "---   \n",
-    " <img align=\"left\" width=\"75\" height=\"75\"  src=\"https://upload.wikimedia.org/wikipedia/en/c/c8/University_of_the_Punjab_logo.png\"> \n",
+    "<img align=\"left\" width=\"110\"   src=\"https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg\"> \n",
     "\n",
-    "<h1 align=\"center\">Department of Data Science</h1>\n",
-    "<h1 align=\"center\">Course: Tools and Techniques for Data Science</h1>\n",
+    "<h1 align=\"center\">Tools and Techniques for Data Science</h1>\n",
+    "<h1 align=\"center\">Course: Python for Data Scientist</h1>\n",
     "\n",
     "---\n",
-    "<h3><div align=\"right\">Instructor: Muhammad Arif Butt, Ph.D.</div></h3>    "
+    "\n",
+    "<h3><div align=\"right\">Muhammad Sheraz(Data Scientist)</div></h3>    "
    ]
   },
   {
@@ -20,15 +21,7 @@
    "id": "fb955b9f",
    "metadata": {},
    "source": [
-    "<h1 align=\"center\">Lecture 3.2 (NumPy-02)</h1>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2f049883",
-   "metadata": {},
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/arifpucit/data-science/blob/master/Section-3-Python-for-Data-Scientists/Lec-3.02(NumPy-02-Array-vs-List).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<h1 align=\"center\">Lecture 2 (NumPy-02)</h1>"
    ]
   },
   {
@@ -565,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
