--- a/Lec-01(NumPy-01-ArrayCreation).ipynb
+++ b/Lec-01(NumPy-01-ArrayCreation).ipynb
@@ -9,7 +9,7 @@
     "<img align=\"left\" width=\"110\"   src=\"https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg\"> \n",
     "\n",
     "<h1 align=\"center\">Tools and Techniques for Data Science</h1>\n",
-    "<h1 align=\"center\">Course: Python for Data Scientists</h1>\n",
+    "<h1 align=\"center\">Course: Python for Data Scientist</h1>\n",
     "\n",
     "---\n",
     "\n",
