--- a/Lec-03(NumPy-03-BasicOperations).ipynb
+++ b/Lec-03(NumPy-03-BasicOperations).ipynb
@@ -6,13 +6,14 @@
    "metadata": {},
    "source": [
     "---   \n",
-    " <img align=\"left\" width=\"75\" height=\"75\"  src=\"https://upload.wikimedia.org/wikipedia/en/c/c8/University_of_the_Punjab_logo.png\"> \n",
+    "<img align=\"left\" width=\"110\"   src=\"https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg\"> \n",
     "\n",
-    "<h1 align=\"center\">Department of Data Science</h1>\n",
-    "<h1 align=\"center\">Course: Tools and Techniques for Data Science</h1>\n",
+    "<h1 align=\"center\">Tools and Techniques for Data Science</h1>\n",
+    "<h1 align=\"center\">Course: Python for Data Scientist</h1>\n",
     "\n",
     "---\n",
-    "<h3><div align=\"right\">Instructor: Muhammad Arif Butt, Ph.D.</div></h3>    "
+    "\n",
+    "<h3><div align=\"right\">Muhammad Sheraz(Data Scientist)</div></h3>    "
    ]
   },
   {
@@ -20,15 +21,7 @@
    "id": "04ba630a",
    "metadata": {},
    "source": [
-    "<h1 align=\"center\">Lecture 3.3 (NumPy-03)</h1>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0e54f511",
-   "metadata": {},
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/arifpucit/data-science/blob/master/Section-3-Python-for-Data-Scientists/Lec-3.03(NumPy-03-BasicOperations).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<h1 align=\"center\">Lecture 3 (NumPy-03)</h1>"
    ]
   },
   {
