--- a/Lec-3.15(Pandas-07-Modifying-Dataframes-II).ipynb
+++ b/Lec-3.15(Pandas-07-Modifying-Dataframes-II).ipynb
@@ -6,13 +6,14 @@
    "metadata": {},
    "source": [
     "---   \n",
-    " <img align=\"left\" width=\"75\" height=\"75\"  src=\"https://upload.wikimedia.org/wikipedia/en/c/c8/University_of_the_Punjab_logo.png\"> \n",
+    "<img align=\"left\" width=\"110\"   src=\"https://upload.wikimedia.org/wikipedia/commons/c/c3/Python-logo-notext.svg\"> \n",
     "\n",
-    "<h1 align=\"center\">Department of Data Science</h1>\n",
-    "<h1 align=\"center\">Course: Tools and Techniques for Data Science</h1>\n",
+    "<h1 align=\"center\">Tools and Techniques for Data Science</h1>\n",
+    "<h1 align=\"center\">Course: Python for Data Scientist</h1>\n",
     "\n",
     "---\n",
-    "<h3><div align=\"right\">Instructor: Muhammad Arif Butt, Ph.D.</div></h3>    "
+    "\n",
+    "<h3><div align=\"right\">Muhammad Sheraz(Data Scientist)</div></h3>    "
    ]
   },
   {
@@ -1445,7 +1446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
