upload all files

--- a/Lec-3.09(Pandas-01-From-Python-Dictionary-to-Pandas-Dataframe).ipynb
+++ b/Lec-3.09(Pandas-01-From-Python-Dictionary-to-Pandas-Dataframe).ipynb
@@ -97,10 +97,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "e251bdc6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "'C:\\Program' is not recognized as an internal or external command,\n",
+      "operable program or batch file.\n"
+     ]
+    }
+   ],
    "source": [
     "# To install this library in Jupyter notebook\n",
     "import sys\n",
@@ -109,17 +118,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "dba905d0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('1.5.3', ['C:\\\\Users\\\\LENOVO\\\\anaconda3\\\\lib\\\\site-packages\\\\pandas'])"
+       "('1.5.2', ['C:\\\\Program Files\\\\Python310\\\\lib\\\\site-packages\\\\pandas'])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c6cec056",
    "metadata": {},
    "outputs": [
@@ -432,7 +441,7 @@
        "[1310 rows x 14 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a4c88b75",
    "metadata": {},
    "outputs": [
@@ -641,7 +650,7 @@
        "[979 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e132d8a1",
    "metadata": {},
    "outputs": [
@@ -1069,7 +1078,7 @@
        "[151085 rows x 67 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "dcdae2d8",
    "metadata": {},
    "outputs": [
@@ -1111,7 +1120,7 @@
        " 'bg': 'A-'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
