--- a/Lec-3.19(Pandas-11-Reshape-using-pivot-melt-crosstab).ipynb
+++ b/Lec-3.19(Pandas-11-Reshape-using-pivot-melt-crosstab).ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "3be05ec7",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
        "8  22/06/2021  Karachi           35        90"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "09152536",
    "metadata": {},
    "outputs": [
@@ -402,20 +402,35 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
        "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"3\" halign=\"left\">humidity</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">temperature</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>date</th>\n",
+       "      <th>20/06/2021</th>\n",
+       "      <th>21/06/2021</th>\n",
+       "      <th>22/06/2021</th>\n",
        "      <th>20/06/2021</th>\n",
        "      <th>21/06/2021</th>\n",
        "      <th>22/06/2021</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>city</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -427,38 +442,48 @@
        "      <td>93</td>\n",
        "      <td>91</td>\n",
        "      <td>90</td>\n",
+       "      <td>33</td>\n",
+       "      <td>30</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Lahore</th>\n",
        "      <td>76</td>\n",
        "      <td>80</td>\n",
        "      <td>85</td>\n",
+       "      <td>38</td>\n",
+       "      <td>41</td>\n",
+       "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Muree</th>\n",
        "      <td>71</td>\n",
        "      <td>70</td>\n",
        "      <td>74</td>\n",
+       "      <td>17</td>\n",
+       "      <td>15</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "date     20/06/2021  21/06/2021  22/06/2021\n",
-       "city                                       \n",
-       "Karachi          93          91          90\n",
-       "Lahore           76          80          85\n",
-       "Muree            71          70          74"
+       "          humidity                       temperature                      \n",
+       "date    20/06/2021 21/06/2021 22/06/2021  20/06/2021 21/06/2021 22/06/2021\n",
+       "city                                                                      \n",
+       "Karachi         93         91         90          33         30         35\n",
+       "Lahore          76         80         85          38         41         39\n",
+       "Muree           71         70         74          17         15         18"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.pivot_table(index='city', columns='date', values='humidity')"
+    "df.pivot_table(index='city', columns='date')"
    ]
   },
   {
@@ -495,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "ecdaafe6",
    "metadata": {},
    "outputs": [
@@ -587,7 +612,7 @@
        "Muree            17         15         18         71         70         74"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "733834ef",
    "metadata": {
     "scrolled": true
@@ -702,7 +727,7 @@
        "Muree           71         70         74          17         15         18"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "7df8d4c1",
    "metadata": {},
    "outputs": [
@@ -1350,7 +1375,7 @@
        "7  21/06/2021   Muree            8        91"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "da8298eb",
    "metadata": {},
    "outputs": [],
@@ -1402,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "9e553c54",
    "metadata": {},
    "outputs": [
@@ -1476,7 +1501,7 @@
        "21/06/2021     76.5  92.0          38     9"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1496,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "9608dfb8",
    "metadata": {},
    "outputs": [
@@ -1570,7 +1595,7 @@
        "21/06/2021      153   184          76    18"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2113,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "74c41892",
    "metadata": {},
    "outputs": [
@@ -2329,7 +2354,7 @@
        "21     1022  kangaroo         410     17"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2352,7 +2377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "03f5be0d",
    "metadata": {},
    "outputs": [
@@ -2433,7 +2458,7 @@
        "zebra     77.285714   1012.0  184.285714"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2453,7 +2478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "0d4e2a62",
    "metadata": {},
    "outputs": [
@@ -2463,7 +2488,7 @@
        "50.94714285714285"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2474,7 +2499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "116b0c39",
    "metadata": {},
    "outputs": [
@@ -2486,7 +2511,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2506,7 +2531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "d7b447e0",
    "metadata": {},
    "outputs": [
@@ -2689,7 +2714,7 @@
        "         1015        76          80"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2890,7 +2915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "af2eef12",
    "metadata": {},
    "outputs": [
@@ -2986,7 +3011,7 @@
        "6     Sunday      25       77      47"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2998,7 +3023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "id": "adcc07c8",
    "metadata": {},
    "outputs": [
@@ -3184,7 +3209,7 @@
        "20     Sunday   murree     47"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3204,7 +3229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "id": "071c2703",
    "metadata": {},
    "outputs": [
@@ -3390,7 +3415,7 @@
        "20     Sunday   murree           47"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3410,7 +3435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "55f66c15",
    "metadata": {},
    "outputs": [
@@ -3498,7 +3523,7 @@
        "6     Sunday  lahore           25"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3510,7 +3535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "e075e2ca",
    "metadata": {},
    "outputs": [
@@ -3598,7 +3623,7 @@
        "6     Sunday  karachi           77"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3610,7 +3635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "id": "6c4568e4",
    "metadata": {},
    "outputs": [
@@ -3698,7 +3723,7 @@
        "13     Sunday  karachi           77"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4254,7 +4279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "2e20d349",
    "metadata": {},
    "outputs": [
@@ -4391,7 +4416,7 @@
        "13     Multan  female   65"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4414,7 +4439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "a65f7ee3",
    "metadata": {},
    "outputs": [
@@ -4482,7 +4507,7 @@
        "Multan          1     1"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4501,7 +4526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "806150e6",
    "metadata": {},
    "outputs": [
@@ -4582,7 +4607,7 @@
        "All             7     7   14"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4617,7 +4642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "1b4bf00d",
    "metadata": {},
    "outputs": [
@@ -4685,7 +4710,7 @@
        "Multan     0.071429  0.071429"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4720,7 +4745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "d10ad158",
    "metadata": {},
    "outputs": [
@@ -4788,7 +4813,7 @@
        "Multan     65.000000  24.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
