--- a/Lec-03(NumPy-03-BasicOperations).ipynb
+++ b/Lec-03(NumPy-03-BasicOperations).ipynb
@@ -480,21 +480,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "arr:  [7 1 4 3 2]\n",
-      "np.min(arr) =  1\n",
-      "np.max(arr) =  7\n",
-      "np.sum(arr) =  17\n",
-      "np.prod(arr) =  168\n"
+      "arr:  [[6 3 9 3 3]\n",
+      " [6 5 4 8 6]\n",
+      " [2 5 2 5 6]\n",
+      " [8 5 6 9 9]\n",
+      " [1 2 1 1 3]]\n",
+      "np.min(arr) =  [1 2 1 1 3]\n",
+      "np.max(arr) =  9\n",
+      "np.sum(arr) =  118\n",
+      "np.prod(arr) =  -683999232\n"
      ]
     }
    ],
    "source": [
     "# Create a 1-D array having 5 random integers from 1 to 9\n",
-    "arr = np.random.randint(1, 10, size=5)\n",
+    "arr = np.random.randint(1, 10, size=(5,5))\n",
     "print(\"arr: \", arr)\n",
     "\n",
     "# After the operation a new `ndarray` is returned, which is a copy of the original array with the operation performed\n",
-    "print(\"np.min(arr) = \",     np.min(arr))\n",
+    "print(\"np.min(arr) = \",     np.min(arr,axis=0))\n",
     "print(\"np.max(arr) = \",     np.max(arr))\n",
     "print(\"np.sum(arr) = \",     np.sum(arr))\n",
     "print(\"np.prod(arr) = \", np.prod(arr))"
